--- a/Lab02Mykhailenko/Lab02Mykhailenko.csproj
+++ b/Lab02Mykhailenko/Lab02Mykhailenko.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Новая папка\" />
+    <Compile Remove="Новая папка\**" />
+    <EmbeddedResource Remove="Новая папка\**" />
+    <None Remove="Новая папка\**" />
+    <Page Remove="Новая папка\**" />
   </ItemGroup>
 
 </Project>
